# goldfish

./: .gitignore  Makefile.am  README  configure.ac
src/: Makefile.am  asciifish.c  main.c  menu.c
src/include/: asciifish.h  menu.h
src/lib/: Makefile.am  aquarium.c  aquarium.h  fish.c  fish.h  gameengine.c  gameengine.h  input.c  input.h
tests/: Makefile.am  goldfish_test.c  goldfish_xfail_test.c
